force-app/main/default/objects/Onboarding__c/Onboarding__c.object-meta.xml
<CustomObject>
    <label>Onboarding On Time</label>
    <nameField>
        <label>Onboarding  Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Onboarding On Times</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>