force-app/main/default/objects/Onboarding__c/fields/Customer_Country_Name__c.field-meta.xml
<CustomField>
    <fullName>Customer_Country_Name__c</fullName>
    <label>Customer Country Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>