force-app/main/default/objects/Onboarding__c/fields/Customer_MCN__c.field-meta.xml
<CustomField>
    <fullName>Customer_MCN__c</fullName>
    <label>Customer MCN</label>
    <length>200</length>
    <type>Text</type>
</CustomField>