force-app/main/default/objects/Onboarding__c/fields/Customer_Region__c.field-meta.xml
<CustomField>
    <fullName>Customer_Region__c</fullName>
    <label>Customer Region</label>
    <length>255</length>
    <type>Text</type>
</CustomField>