force-app/main/default/objects/Onboarding__c/fields/Cycle_Time_without_Delay_closed__c.field-meta.xml
<CustomField>
    <fullName>Cycle_Time_without_Delay_closed__c</fullName>
    <label>Cycle Time without Delay closed</label>
    <length>255</length>
    <type>Text</type>
</CustomField>