force-app/main/default/objects/Onboarding__c/fields/Project_Age_with_NCR_Delays__c.field-meta.xml
<CustomField>
    <fullName>Project_Age_with_NCR_Delays__c</fullName>
    <label>Project Age with NCR Delays</label>
    <length>255</length>
    <type>Text</type>
</CustomField>