force-app/main/default/objects/Onboarding__c/fields/Project_Aging_with_delay__c.field-meta.xml
<CustomField>
    <fullName>Project_Aging_with_delay__c</fullName>
    <label>Project Aging with delay</label>
    <length>255</length>
    <type>Text</type>
</CustomField>